--- a/styles.css
+++ b/styles.css
@@ -943,6 +943,9 @@ html {
   .services-container {
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 2;
+    max-width: 1100px;
   }
 
   /* Clients & Gallery: tighter grid */
