--- a/styles.css
+++ b/styles.css
@@ -877,9 +877,14 @@ html {
   /* right: 1rem; */
 }
 @media (max-width: 768px) {
-    body {
-    background: url('./background.png') center top / cover no-repeat scroll !important;
+  @media (max-width: 768px) {
+  body {
+    background-attachment: fixed !important;
+    /* background-position: center top; */
   }
+  /* ... */
+}
+
 
   /* Header & Nav */
   .main-header {
