--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ img {
 }
 
 
-
+/* HERO SECTION */
 .hero {
   min-height: 100vh;
   display: flex;
@@ -134,7 +134,7 @@ img {
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 1400px;
+  max-width: 1300px;
   margin: auto;
 }
 
@@ -172,15 +172,36 @@ img {
   flex: 1 1 45%;
   text-align: center;
   padding: 20px;
+  animation: float 3s ease-in-out infinite;
+  filter: drop-shadow(4px 4px 6px rgba (white));
+}
+
+@keyframes float {
+  0% {transform: translateY(0);}
+  50% {transform: translateY(-10px);}
+  100% {transform: translateY(0);}
 }
 
 .hero-image img {
-  max-width: 100%;
+  max-width: 90%;
   height: auto;
-  border-radius: 12px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  border-radius: 16px;
+  border: 5px solid white;
+  box-shadow:
+    0 20px 30px rgba(0, 0, 0, 0.4),
+    0 10px 15px rgba(0, 0, 0, 0.3);
+  transform: translateZ(0);
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
 
+.hero-image img:hover {
+  transform: translateY(-10px);
+  box-shadow:
+    0 25px 40px rgba(0, 0, 0, 0.5),
+    0 15px 20px rgba(255, 255, 255, 0.2);
+}
+
+/* Responsive */
 @media (max-width: 768px) {
   .hero-wrapper {
     flex-direction: column;
@@ -195,7 +216,14 @@ img {
   .hero-content h1 {
     font-size: 2.2rem;
   }
+
+  .hero-image img {
+    max-width: 80%;
+  }
 }
+
+
+
 
 /* ABOUT SECTION */
 .about-section {
@@ -440,19 +468,19 @@ img {
 
 .clients-subtext {
   font-size: 1.1rem;
-  color: #ccc;
+  color: #faefef;
   margin-bottom: 40px;
 }
 
 .clients-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
-  gap: 30px;
+  gap: 50px;
   justify-items: center;
 }
 
 .client-logos {
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(221, 223, 218, 0.295);
   padding: 20px;
   border-radius: 12px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -478,6 +506,8 @@ img {
 .client-logos:hover img {
   opacity: 1;
 }
+
+
 
 /* gallery Section */
 .gallery-section {
@@ -884,3 +914,10 @@ img {
   color: #ff5722;
   margin-right: 8px;
 }
+
+
+
+
+
+
+
